Added first version of keyword processor.

--- a/settings/settings.properties
+++ b/settings/settings.properties
@@ -1,5 +1,5 @@
 # It can be some unique string.
-verbatim.start=\begtt
-verbatim.end\endtt
+verbatim.start=\\begtt
+verbatim.end=\\endtt
 
-begin_text=\input opmac
+begin_text=\\input opmac
