Repaired tabular and verbatim processor.

--- a/settings/tex_macros.properties
+++ b/settings/tex_macros.properties
@@ -1,6 +1,6 @@
-bold=\bf
-gray=\Grey
-yellow=\Yellow
-red=\Red
-blue=\Blue
-cyan=\Cyan
+bold=\bold #T
+gray=\grey #T
+yellow=\yellow #T
+red=\red #T
+blue=\blue #T
+cyan=\cyan #T
