--- a/settings/language_settings/java_match.properties
+++ b/settings/language_settings/java_match.properties
@@ -3,7 +3,6 @@ keywords=abstract,continue,for,new,switch,assert,default,goto,package,synchroniz
 comment.line=//
 comment.begin=/*
 comment.end=*/
-comment.char=*
 
 string=",'
 
@@ -11,3 +10,5 @@ string=",'
 class.method=(public|private|protected)? ?[a-zA-Z0-9_]* [a-zA-Z0-9_]*\([a-zA-Z0-9, _]*\)
 class.declaration=(public|private|protected) class [a-zA-Z0-9_]*
 class.calling=(this|[a-zA-Z0-9_]*)\.[a-zA-Z0-9_]*(\([a-zA-Z0-9., _]*\))?
+
+delimetrs=., ;=
