First function version, but without highlighting method calling.

--- a/settings/language_settings/java_highlighting.properties
+++ b/settings/language_settings/java_highlighting.properties
@@ -1,5 +1,6 @@
-keywords=bold
-comment=gray
+# This file contains mapping from java match file things to TeX macros.
+keywords=keyword
+comment=comment_gray
 string=yellow
 class.method=red
 class.declaration=blue
