--- a/settings/language_settings/java_match.properties
+++ b/settings/language_settings/java_match.properties
@@ -11,4 +11,4 @@ class.method=(public|private|protected)? ?[a-zA-Z0-9_]* [a-zA-Z0-9_]*\([a-zA-Z0-
 class.declaration=(public|private|protected) class [a-zA-Z0-9_]*
 class.calling=(this|[a-zA-Z0-9_]*)\.[a-zA-Z0-9_]*(\([a-zA-Z0-9., _]*\))?
 
-delimetrs=., ;=
+delimetrs=., ;=+-*/
