--- a/settings/tex_macros.properties
+++ b/settings/tex_macros.properties
@@ -1,6 +1,8 @@
-bold=\bold #T
+bold={\bf #T}
 gray=\grey #T
-yellow=\yellow #T
+comment_gray={\localcolor \Grey #T}
+yellow={\localcolor \Yellow #T}
 red=\red #T
 blue=\blue #T
 cyan=\cyan #T
+keyword={\bf {\localcolor \Blue #T}}
