--- a/settings/language_settings/java_match.properties
+++ b/settings/language_settings/java_match.properties
@@ -1,4 +1,4 @@
-keywords=abstract,continue,for,new,switch,assert,default,goto,package,synchronized,boolean,do,if,private,this,break,double,implements,protected,throw,byte,else,import,public,throws,case,enum,instanceof,return,transient,catch,extends,int,short,try,char,final,interface,static,void,class,finally,long,strictfp,volatile,const,float,native,super,while
+keywords=abstract,continue,for,new,switch,assert,default,goto,package,synchronized,boolean,do,if,private,this,break,double,implements,protected,throw,byte,else,import,public,throws,case,enum,instanceof,return,transient,catch,extends,int,short,try,char,final,interface,static,void,class,finally,long,strictfp,volatile,const,float,native,super,while,true,false,null
 
 comment.line=//
 comment.begin=/*
@@ -11,4 +11,6 @@ class.method=(public|private|protected)? ?[a-zA-Z0-9_]* [a-zA-Z0-9_]*\([a-zA-Z0-
 class.declaration=(public|private|protected) class [a-zA-Z0-9_]*
 class.calling=(this|[a-zA-Z0-9_]*)\.[a-zA-Z0-9_]*(\([a-zA-Z0-9., _]*\))?
 
-delimetrs=., ;=+-*/
+delimetrs=., ;=+-*/()
+block.start={
+block.end=}
