Cleared and comment source files. Add some new settings.

--- a/src/main/resources/settings/language_settings/java_highlighting.properties
+++ b/src/main/resources/settings/language_settings/java_highlighting.properties
@@ -1,4 +1,5 @@
 # This file contains mapping from java match file things to TeX macros.
+# Every file for language must contain everything.
 keywords=keyword
 comment=comment_gray
 string=yellow
