--- a/src/main/resources/settings/settings.properties
+++ b/src/main/resources/settings/settings.properties
@@ -1,8 +1,16 @@
+# Setting for application. Every \ must be escaped.
+
+
 # It can be some unique string.
 verbatim.start=\\begtt
 verbatim.end=\\endtt
 
-begin_text=
+# TeX text on begin and end of block
+block.start=\\parskip 30pt
+block.end=\\parskip 30pt
 
-space.size=4
+# Size of fonts in code block. It is in percentage.
+font.size = 80
+
+# How many space will be one tab.
 space.tabular=4
