--- a/src/main/resources/settings/tex_macros.properties
+++ b/src/main/resources/settings/tex_macros.properties
@@ -1,3 +1,5 @@
+# Mapping from application TeX macro keyword to Tex Macro.
+# #T is for variable, which will be text. It must be in every macro.
 bold={\bf #T}
 gray=\grey #T
 comment_gray={\localcolor \Grey #T}
