--- a/src/main/resources/settings/language_settings/java_match.properties
+++ b/src/main/resources/settings/language_settings/java_match.properties
@@ -1,3 +1,5 @@
+# In this file are mappings from my keyword language to programing language.
+
 keywords=abstract,continue,for,new,switch,assert,default,goto,package,synchronized,boolean,do,if,private,this,break,double,implements,protected,throw,byte,else,import,public,throws,case,enum,instanceof,return,transient,catch,extends,int,short,try,char,final,interface,static,void,class,finally,long,strictfp,volatile,const,float,native,super,while,true,false,null
 
 comment.line=//
@@ -6,7 +8,8 @@ comment.end=*/
 
 string=",'
 
-# Here must be method regex.
+# Not complete.
+# Here must be regex.
 class.method=(public|private|protected)? ?[a-zA-Z0-9_]* [a-zA-Z0-9_]*\([a-zA-Z0-9, _]*\)
 class.declaration=(public|private|protected) class [a-zA-Z0-9_]*
 class.calling=(this|[a-zA-Z0-9_]*)\.[a-zA-Z0-9_]*(\([a-zA-Z0-9., _]*\))?
