--- a/src/main/resources/settings/language_settings/java_match.properties
+++ b/src/main/resources/settings/language_settings/java_match.properties
@@ -14,6 +14,6 @@ class.method=(public|private|protected)? ?[a-zA-Z0-9_]* [a-zA-Z0-9_]*\([a-zA-Z0-
 class.declaration=(public|private|protected) class [a-zA-Z0-9_]*
 class.calling=(this|[a-zA-Z0-9_]*)\.[a-zA-Z0-9_]*(\([a-zA-Z0-9., _]*\))?
 
-delimetrs=., ;=+-*/()
+delimiters=., ;=+-*/()<>
 block.start={
 block.end=}
