Adde some features. Release version 1.0.

--- a/CodeTeX/settings/settings.properties
+++ b/CodeTeX/settings/settings.properties
@@ -1,16 +1,19 @@
 # Setting for application. Every backslash must be escaped.
 
-# It can be some unique string.
+# Start and end of block, which will be processed. It can be some unique string.
 verbatim.start=\\begtt
 verbatim.end=\\endtt
 
-# TeX text on begin and end of created block.
+# Text which will be before block.
 block.start=\\bigbreak
+# Text which will be after block.
 block.end=\\bigbreak
+# Text which will be in block at begin.
+block.inner.start=\\localcolor
 
 # Size of fonts in code block. It is in percentage. Minimal value is 1 and max value 200.
 font.size = 80
 font.par.size = 1
 
 # How many space will be one tab.
-space.tabular=4
+space.tabular=2
