--- a/src/main/resources/settings/tex_macros.properties
+++ b/src/main/resources/settings/tex_macros.properties
@@ -1,11 +1,11 @@
 # Mapping from application TeX macro keyword to Tex Macro.
 # #T is for variable, which will be text. It must be in every macro.
 bold={\bf #T}
-gray={\localcolor \Grey #T}
-comment_gray={\localcolor \Grey #T}
-yellow={\localcolor \Yellow #T}
-red={\localcolor \Red #T}
-blue={\localcolor \Blue  #T}
-cyan={\localcolor \Cyan #T}
-keyword={\bf {\localcolor \Blue #T}}
-green={\bf {\localcolor \Green #T}}
+gray={\Grey #T}
+comment_gray={\Grey #T}
+yellow={\Yellow #T}
+red={\Red #T}
+blue={\Blue  #T}
+cyan={\Cyan #T}
+keyword={\bf {\Blue #T}}
+green={\bf {\Green #T}}
